Update on current table structure

--- a/html-files/about.html
+++ b/html-files/about.html
@@ -185,13 +185,16 @@
                     <td>2017-2020</td>
                     <td>Express</td>
                 </tr>
+                </tbody>
+                <tfoot>
                 <tr>
                     <th scope="row">3</th>
                     <td >Singapore Polytechnic</td>
                     <td >2021-2023</td>
                     <td>SOC DAAA</td>
                 </tr>
-                </tbody>
+                </tfoot>
+
             </table>
         </div>
     </div>
@@ -205,7 +208,7 @@
             <br><br>
         </div>
         <div class="col-md-6 col-sm-12">
-            <table class="table table-bordered border-dark table-hover table-responsive table-sm">
+            <table class="table table-bordered border-dark  table-responsive table-sm">
                 <thead>
                 <tr>
                     <th scope="col">#</th>
@@ -262,7 +265,7 @@
                 <tr>
                     <th scope="row">7</th>
                     <td> Edusave Certificate Of Academic Achievement 2020</td>
-                    <td>Edusave</td>
+                    <td rowspan="7">Edusave</td>
                     <td>2020</td>
                 </tr>
 
@@ -270,7 +273,6 @@
                 <tr>
                     <th scope="row">8</th>
                     <td>Edusave Certificate Of Academic Achievement 2019</td>
-                    <td>Edusave</td>
                     <td>2019</td>
                 </tr>
 
@@ -278,7 +280,6 @@
                 <tr>
                     <th scope="row">9</th>
                     <td>CDC-CCC Education Merit Award 2020</td>
-                    <td>Edusave</td>
                     <td>2020</td>
                 </tr>
 
@@ -286,29 +287,30 @@
                 <tr>
                     <th scope="row">10</th>
                     <td>Edusave Award, For Achievement, Good Leadership And Service 2020</td>
-                    <td>Edusave</td>
                     <td>2020</td>
                 </tr>
                 <tr>
                     <th scope="row">11</th>
                     <td> Edusave Scholarship 2018</td>
-                    <td>Edusave</td>
                     <td>2018</td>
                 </tr>
                 <tr>
                     <th scope="row">12</th>
                     <td> Edusave Character Award 2018</td>
-                    <td>Edusave</td>
                     <td>2018</td>
                 </tr>
 
                 <tr>
                     <th scope="row">13</th>
                     <td> Edusave Scholarship 2017</td>
-                    <td>Edusave</td>
                     <td>2017</td>
                 </tr>
                 </tbody>
+                <tfoot>
+                <tr>
+                    <td class='text-end' colspan="4">and etc...</td>
+                </tr>
+                </tfoot>
             </table>
         </div>
         <div class="col-md-6 col-sm-12">
