Comment for feedback page html

--- a/html-files/index.html
+++ b/html-files/index.html
@@ -69,6 +69,7 @@
 </header>
 <!--End of header-->
 <!--Start of search overlay configuration-->
+<!--Animation for appear of overlay-->
 <div class="container-fluid searchbaranimation" id="searchbar">
     <div class="row ">
         <div class="col-12 ">
@@ -151,6 +152,7 @@
 
 <!--Start of second section-->
 <!--Grey color section-->
+<!---Class grey for background color to be grey and margintop to have a 200px padding top and bottom-->
 <div class="container-fluid grey margintop">
 <div class="container ">
     <div class="row">
