--- a/html-files/secondary.html
+++ b/html-files/secondary.html
@@ -69,6 +69,7 @@
 </header>
 <!--End of header-->
 <!--Start of search overlay configuration-->
+<!--Animation for appear of overlay-->
 <div class="container-fluid searchbaranimation" id="searchbar">
     <div class="row ">
         <div class="col-12 ">
@@ -250,6 +251,7 @@
 <!-- End of first section-->
 <!--Start of second section-->
 <!--Grey color section-->
+<!---Class grey for background color to be grey and margintop to have a 200px padding top and bottom-->
 <div class="container-fluid margintop grey">
     <!--enclose with a container-->
     <div class="container">
