--- a/html-files/feedback.html
+++ b/html-files/feedback.html
@@ -2,29 +2,43 @@
 <html lang="en" >
 <head>
     <meta charset="UTF-8">
+    <!-- Sets the width of the page to follow the screen-width of the device and zoom level when loaded-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--Define page title to appear on tab-->
     <title>Feedback Wall</title>
+    <!--Insert search keywords for search engine-->
     <meta name="keywords" content="ZhuoFan,sp,daaa,卓凡,ChenZhuofan,Chen,ZHUOFAN,CHEN">
+    <!---Set page icon to appear at tab-->
     <link rel="icon" href="../profilepic/profile.jpg"/>
+    <!---Set website description for search engine-->
     <meta name="description"  content="Personal Website | ZhuoFan | I am 17 years old this year.Currently a student studying in Singapore Polytechnic.I love to play badminton and to do coding<br>Click to know more about me:)">
     <meta name="name" content="ZhuoFan">
     <meta name="image" content="profile.jpg">
+    <!---Bootstrap 5 support--->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+    <!--Import common css throughout website-->
     <link href="../css/common.css" rel="stylesheet">
+    <!--Import page-specific css-->
     <link href="../css/feedback.css" rel="stylesheet">
+    <!--Import page-specific js-->
     <script src="../js/feedback.js"></script>
 </head>
+<!--Start of body-->
 <body>
+<!--Start of header-->
 <header>
     <nav id='nav' class="navbar py-4 navbar-expand-md navbar-light fixed-top bg-white">
+        <!--Remove the 20% gaps for navigation bar on page-->
         <div class="container-fluid">
+            <!-- Let profile picture to appear with page title-->
             <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"   alt="Image of ZhuoFan's profile picture">ZhuoFan | Feedback&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
+                <!-- Navigation Items-->
                 <ul class=" navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
                         <a class="nav-link " href="index.html">Home</a>
@@ -45,7 +59,7 @@
                         <a class="nav-link active"  aria-current="page" href="feedback.html" >Feedback</a>
                     </li>
                 </ul>
-
+                <!--Search button-->
                 <form class="d-flex">
                     <img src="../searchbaricons/search.png" id="search" alt="Icon of search"/>
                 </form>
@@ -53,12 +67,16 @@
         </div>
     </nav>
 </header>
+<!--End of header-->
+<!--Start of search overlay configuration-->
+<!--Animation for appear of overlay-->
 <div class="container-fluid searchbaranimation" id="searchbar">
     <div class="row ">
         <div class="col-12 ">
-
+            <!--On typing ,search matching-->
             <input type="text" id="sbar" onkeyup="searchfeature()" class="form-control searchbarcss"  placeholder="Search..">
             <br>
+            <!--Display search result in table-->
             <div class="col-12 " style="position:relative;top:30%;">
                 <table class="table table-light" id="searchtable" style="border-collapse: separate;display:none;">
                     <tr><th onclick="window.location.href='about.html'" style="cursor:pointer;" scope="row">About Me</th></tr>
@@ -91,14 +109,21 @@
         </div>
     </div>
 </div>
+<!--Start of feedback wall cover page section-->
+<!---Class grey for background color to be grey and margintop to have a 200px padding top and bottom-->
 <div class="container-fluid grey margintop">
     <div class="container">
         <div class="row textfly">
+            <!--Occupy whole line-->
             <div class="col-12">
+                <!--Setting box shadow ,length width and background-->
                 <div class="container feedbackwall" id="feedbackwall">
                    <br>
+                    <!--Card items-->
+                    <!--Each card occupy 3 grid -->
                     <div class="row row-cols-3 row-cols-md-3 " id="tr">
                         <div class="col">
+                            <!--Set card max width and configuration of card using bootstrap class-->
                             <div class="card text-dark bg-light mb-3 maxwidth" >
                                 <div class="card-header"><img src="../profilepic/profile.jpg"  class="rounded me-2 profilepicsizing" alt="Image of ZhuoFan's profile picture">ZhuoFan</div>
                                 <div class="card-body">
@@ -112,7 +137,8 @@
                         <div class="col">
                             <div class="card text-dark bg-light mb-3 maxwidth" >
 
-                                <div class="card-header">   <img src="../feedback/jiachengprofilepic.jpg"   class="rounded me-2 profilepicsizing" alt="Image of JiaCheng's profile picture">Jia Cheng</div>
+                                <div class="card-header">
+                                    <img src="../feedback/jiachengprofilepic.jpg"   class="rounded me-2 profilepicsizing" alt="Image of JiaCheng's profile picture">Jia Cheng</div>
                                 <div class="card-body">
 
                                     <p class="card-text">This is the first website that have extremely amazed me,I never visit such a nice one</p>
@@ -125,11 +151,13 @@
 
                     </div>
                 </div>
-
+<!--End of feedback wall-->
+                <!--Text appear in center of page-->
                 <div class="col-12 text-center ">
                     <br><br>
                     <h1>Feedback Wall</h1>
                     <p>All feedback written will be shown at the wall above<br>Write your first feedback today!!</p>
+                    <!--Slide down button *Smooth scrolll had been enabled throughout-->
                     <img  onclick="window.location.href='feedback.html#feedbackform'" src="../arrowdown/arrowdown.svg" alt="Icon of arrow down" class="square">
                 </div>
             </div>
@@ -137,9 +165,11 @@
         </div>
     </div>
 </div>
-
+<!-- End of feedback wall cover section-->
+<!--Start of first section-->
 <div class="container margintop" id="feedbackform">
     <div class="row">
+        <!--Text center-->
 <div class="col-12 text-center">
     <h1><span class="royalblue">Enquiry</span> and <span class="mediumgreen">Feedback</span></h1>
 <p>Your feedback is important to us.Please let us know if you have any feedback :).
@@ -147,12 +177,14 @@
 </p>
     <br><br>
 </div>
+        <!-- Left section : consisting of forms ,occupying 6 grid-->
         <div class="col-sm-12 col-lg-6">
             <form id="form">
                 <label for="fname" class="h4">First name</label><br>
                 <!---Text box--->
                 <input type="text"  class="commonform"  id="fname" name="fname"><br><br>
                 <label class="h4" for="last">Last name</label><br>
+                <!--Selection box componenet-->
                 <select class="notcommonform" id="sir" name="sir" >
                     <option value="Mr" >Mr</option>
                     <option value="Miss" >Miss</option>
@@ -164,8 +196,10 @@
                 <label class="h4" for="date">Date of visit</label><br>
                 <input type="date" class="commonform" id="date" name="date"><br><br>
                 <label class="h4" for="email" >Email</label><br>
+                <!--Regular expression for email ,needs for xxxx(.)xxx@xxxxxx.xxx-->
                 <input type="email" class="commonform" id="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" name="email"><br><br>
                 <label class="h4" for="country">Country</label><br>
+                <!--List of countries-->
                 <select id="country" name="country" class="notcommonform2">
                     <option value="" selected disabled hidden>Select your country</option>
                     <option value="Afghanistan">Afghanistan</option>
@@ -413,20 +447,26 @@
                     <option value="Zambia">Zambia</option>
                     <option value="Zimbabwe">Zimbabwe</option>
                 </select><br><br>
+
+                <!--End of country list-->
                 <label for="comment" class="h4" >Feedback</label><br>
                 <textarea id="comment" name="comment" cols="40" rows="5"></textarea><br><br>
                 <input type="checkbox" id="agree" name="agree">
                 <label class="formtext" for="agree">I've read and agreed to User Agreement and Privacy Policy</label>
               <br><br>
                 <input id="submit" class="submit" type="submit"/>
+                <!--User term and condition button-->
                 <button type="button" id="btnmodel" class="btn btn-primary" data-bs-toggle="modal" data-target="#userModal" data-bs-target="#userModal">User Agreement</button>
+              <!--Modal component ,once the button is clicked ,the modal will pop up-->
                 <div class="modal fade modal-dialog-scrollable" id="userModal" tabindex="-1" aria-labelledby="userModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
+                                <!--Header-->
                                 <h5 class="modal-title" id="userModalLabel">User Agreement and Privacy Policy</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
+                            <!--Body message-->
                             <div class="modal-body">
                                 <p><strong>Please read this carefully.</strong></p>
                                 <!---Expanded text--Text generated using https://www.termsfeed.com/eula-generator\\--->
@@ -466,6 +506,7 @@
                                 By phone number: +65 83836591
                             </div>
                             <div class="modal-footer">
+                                <!--Close and download button-->
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                                 <button onclick="window.location.href='https://github.com/zhuofan-16/hanpdf/raw/main/End-User%20License%20Agreement%20(_Agreement_).pdf'" type="button" class="btn btn-primary">Download</button>
                             </div>
@@ -474,42 +515,49 @@
                 </div>
             </form>
         </div>
+        <!-- End of the left section of the first section-->
+        <!--Start of the right section of the first section (Occupy 6 grid too)-->
         <div class="col-sm-12 col-lg-6 text-end  ">
+            <!--A image -->
             <img src="../feedback/feedback.png" alt="Image of feedback" class="height400">
         </div>
     </div>
 </div>
+
+<!--Toast,feedback submitted message .Upon submit button is pressed ,this toast will be triggered-->-->
 <div class=" position-fixed bottom-0 end-0 p-3 zindex99" >
 <div class="toast-container">
     <div class="toast" id="sucessfd" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
         <div class="toast-header">
+            <!--Header:Profile pic + name +time-->
             <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="Image of ZhuoFan's profile picture">
             <strong class="mr-auto">ZhuoFan</strong>
 
             <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
-
+            <!--Button to dismiss toast-->
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close">
             </button>
         </div>
-
+        <!--Message-->
         <div class="toast-body">
             Thank you for your feedback.Your feedback is now live in the feedback wall!<br>Have a nice day!! :)
         </div>
     </div>
 
 
-
+<!--Toast,welcome message .Upon entering page ,this message will be pop up-->
     <div class="toast" id="welcome" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
         <div class="toast-header">
+            <!--Header:Profile pic + name +time-->
             <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="Image of Zhuofan's profile picture">
             <strong class="mr-auto">ZhuoFan</strong>
 
             <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
-
+            <!--Button to dismiss toast-->
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close">
             </button>
         </div>
-
+        <!--Message-->
         <div class="toast-body">
             Hello,I am ZhuoFan.<br>This is my feedback page.<br>Do write a kind comment?.<br>Have a nice day!! :)
         </div>
