--- a/html-files/secondary.html
+++ b/html-files/secondary.html
@@ -1,3 +1,13 @@
+<!--
+MODULE NAME : ST0501 : FRONT-END WEB DEVELOPMENT
+MODULE LECTURER: MR LIM CHIN MIN
+MODULE ASSIGNMENT: CA2 WEBSITE ASSIGNMENT (WITH BOOTSTRAP AND JS)
+Student Name: CHEN ZHUOFAN
+Student No. : P2100746
+Student Class: DAAA/FT/1A/04
+Page:Secondary School Experience (HTML)
+Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
+-->
 <!DOCTYPE html>
 <html lang="en" >
 <head>
