Add necessary photos authorship

--- a/html-files/future.html
+++ b/html-files/future.html
@@ -72,6 +72,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 </ul>
                 <!--Search button-->
                 <form class="d-flex">
+                    <!--Search icon taken from https://www.clipartmax.com/middle/m2H7m2K9H7b1G6m2_computer-icons-google-search-clip-art-transprent-%E2%93%92-transparent-background-magnifying-glass/-->
                     <img src="../searchbaricons/search.png" id="search" alt="Icon of search"/>
                 </form>
             </div>
@@ -132,6 +133,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <div class="col-12 text-center ">
                     <div class="container rocket" id="rocket">
                         <div id="innerrocket">
+                            <!--Image taken from https://www.pinclipart.com/maxpin/iiomi/ -->
                             <img alt="Image of rocket" src="../prospectphoto/rocket.png" class="width50"  >
                             <div class="" id="line"></div>
                         </div>
@@ -141,6 +143,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                     <br><br>
                     <h1>Future Career</h1>
                     <p>View my current course and my future prospect.</p>
+                    <!--Icon from BootStrap https://icons.getbootstrap.com/icons/arrow-down-square/-->
                     <img  onclick="window.location.href='future.html#daaareflection';" src="../arrowdown/arrowdown.svg" alt="Icon of arrow down" class="square">
 
                 </div>
@@ -172,6 +175,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             </p>
         </div>
         <div class="col-md-6 col-sm-12 text-end " >
+            <!--Image from Singapore Polytechnic Website ,https://www.sp.edu.sg/soc/courses/full-time-diplomas/data-analytics-and-artificial-intelligence-(ai)/overview-->
             <img alt="Image of DAAA Course Info" src="../spphoto/daaacourseinfo.jpg" id="daaaphoto">
 
         </div>
@@ -180,7 +184,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 <div class="container-fluid margintop grey">
     <div class="container">
         <div class="row" id="expsp">
-            <div class="catt col-lg-3 col-md-6 col-sm-6" >
+            <div class="catt col-xl-3 col-md-6 col-sm-6" >
                 <div class="card" id='card1' style="width: 20rem; height: 25rem;">
                     <div id="card1font">
                         <img src="../spphoto/singaporepolytechnicfrontview.jpg"  class="card-img-top cardimg1" alt="Image of Singapore Polytechnic ">
@@ -191,6 +195,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                     <div id="card1backside">
                         <div class="container row aligncard">
                             <div class="text-center">
+                                <!-- Icon from https://github.com/icons8/flat-color-icons-->
                                 <img src="../cardicons/landscape.svg" alt="A icon showing landscape" class="cardimagestyle">
                                 <p><strong>When I first walked into SP on 14 April 2021 for the <span class="royalblue">freshman orientation program</span>, I was actually  <span class="mediumgreen">kind of excited </span> to meet new people and see new things.</strong></p>
                             </div>
@@ -201,7 +206,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                     </div>
                 </div>
             </div>
-            <div class="catt col-lg-3 col-md-6 col-sm-6" >
+            <div class="catt col-xl-3 col-md-6 col-sm-6" >
                 <div class="card" id='card2' style="width: 20rem; height: 25rem;">
                     <div id="card2font">
                         <img src="../spphoto/daaaclassphoto.jpg"  class="card-img-top cardimg1" alt="DAAA/FT/1A/04 AY2021 Class Photo">
@@ -212,6 +217,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                     <div id="card2backside">
                         <div class="container row aligncard">
                             <div class="text-center">
+                                <!--Icon from https://github.com/icons8/flat-color-icons-->
                                 <img src="../cardicons/collaboration.svg" alt="A icon showing collaborations" class="cardimagestyle">
                                 <p><strong>My classmates all come from <span class="orange">different backgrounds</span>.For some of them,we have <span class="red">already</span> knew each other previously.Know more about how my classmates are.</strong></p>
 
@@ -223,7 +229,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-sm-12 text-end">
+            <div class="col-xl-6 col-md-12 col-sm-12 text-end">
                 <h1><span class="forestgren">Experience </span>In Course</h1>
                 <p>School have started for around 5 months.In this 5 months,I have learned more about proposal writing ,critical thinking , fundamental of computing,Javascript,HTML,CSS,BootStrip5(Front End Web Development) and etc.I have also understood how to use them to help me.I have also learn some Mathematics that is somehow related to my course.In this 5 month ,I have realise that the saying that "Poly is easy"is a scam.In SP,there is a lot of self directed learning and self responsibility.We need do a lot of search up to make ourself to be able to understand further apart from the content taught in lessons.But overall,I think the course is manageable if you are willing to spend effort and time. View more about the experience in SP here.</p>
             </div>
@@ -241,7 +247,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         </p>
         </div>
         <div class="col-sm-12 col-md-6 text-end">
-            <!----<a href="https://iconscout.com/icons/cloud" target="_blank">Cloud Icon</a> by <a href="https://iconscout.com/contributors/chamedesign" target="_blank">Chameleon Design</a>--->
+            <!--Cloud Icon taken from https://iconscout.com/contributors/chamedesign" by Chameleon Design-->
             <img class="greyscale cloudsvg" alt="A image showing cloud computing" src="../prospectphoto/cloudcomputing.svg" id='cloud' >
         </div>
     </div>
