--- a/html-files/index.html
+++ b/html-files/index.html
@@ -72,6 +72,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 </ul>
                 <!--Search button-->
                 <form class="d-flex">
+                    <!--Search icon taken from https://www.clipartmax.com/middle/m2H7m2K9H7b1G6m2_computer-icons-google-search-clip-art-transprent-%E2%93%92-transparent-background-magnifying-glass/-->
                     <img src="../searchbaricons/search.png" id="search" alt="Image of search"/>
                 </form>
             </div>
@@ -130,6 +131,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     <h1 id="enlarge">CHEN ZHUOFAN</h1> <br> <br>
     <h3>My Experience in Poly and My Career Prospect</h3><br><br>
     <!--Upon clicked ,slide to the first section-->
+    <!--Icon from BootStrap https://icons.getbootstrap.com/icons/arrow-down-square/-->
     <img onclick="window.location.href='index.html#aboutmesum';"  src="../arrowdown/arrowdown.svg" alt="Image of arrow down" class="arrowdown">
 </div>
 
@@ -308,6 +310,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
  <!--Card 1 (on hover flip to backside-->
     <div class="card" id='card1' style="width:20rem;height:25rem;" >
       <div id="card1font">
+          <!-- Image from https://mastermandarin.org/tag/education/ -->
         <img src="../cardphoto/education.jpg" class="card-img-top" alt="Image of books">
         <div class="card-body">
             <h3 class="card-title">Education Background</h3>
@@ -316,6 +319,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <div id="card1backside">
             <div class="container row aligncard">
                 <div class="text-center">
+                    <!-- Icon from https://github.com/icons8/flat-color-icons-->
                     <img src="../cardicons/graduation_cap.svg" alt="Icon of graduation caps" class="cardimagestyle">
                     <p><strong>I am a student of <span class="yellowcolor"> Dunearn Secondary School</span> from 2017 to 2020 and currently a student of <span class="darkcyn">Singapore Polytechnic</span>. Know more about my experience.</strong></p>
                     <div class="col text-center">
@@ -332,6 +336,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             <!--Card 2 (on hover flip to backside-->
             <div class="card " id="card3" style="width:20rem;height:25rem;">
           <div id="card3font">
+              <!-- Image from https://6nomads.com/resources/remotetools/tproduct/250509661-285866365871-github-->
             <img src="../cardphoto/github.png"  class="card-img-top githubimg" alt="Image of Github">
             <div class="card-body">
                 <h3 class="card-title">My Github</h3>
@@ -340,6 +345,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             <div id="card3backside" >
                 <div  class="container row aligncard ">
     <div class="text-center">
+       <!--Icon from https://github.com/icons8/flat-color-icons-->
     <img src='../cardicons/command_line.svg' alt="Icon of command line" class="cardimagestyle">
     <p><strong>I have use Github for couples of years.Mostly involved in <span class="springgreen">Android development</span> and <br> <span class="cornflowerblue"> C Language </span> projects.Take a look at some of my projects.</strong></p>
     </div>
@@ -354,6 +360,8 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             <!--Card 3 (on hover flip to backside)-->
             <div class="card" id="card2" style="width:20rem;height:25rem;">
                <div id="card2font">
+                   <!-- Image from https://www.execunet.com/category/career-center/market-info-and-trends/executive-market-intelligence-market-info-and-trends/page/2/
+                   -->
                 <img src="../cardphoto/achievement.jpeg" class="card-img-top githubimg" alt="Image of Achievement">
                 <div class="card-body">
                     <h3 class="card-title">Achievements</h3>
@@ -362,6 +370,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <div id="card2backside">
                     <div class="container row aligncard">
                         <div class="text-center">
+                            <!-- Icon from https://github.com/icons8/flat-color-icons-->
                             <img src="../cardicons/certificate.svg" alt="Icon of certificates" class="cardimagestyle">
                             <p><strong>From 2017 to present,I have participated in a lot of Mathematics and Science competition like <span class="purplecolor">Australia Big Science Competition</span> and <br> <span class="pinkred">ICAS Mathematics Competition</span>.View more of my achievements here!</strong></p>
                         </div>
@@ -379,6 +388,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             <!--Card 4 (on hover flip to backside-->
             <div class="card" id='card4' style="width:20rem;height:25rem;">
              <div id="card4font">
+                 <!--Image from Singapore Polytechnic Website ,https://www.sp.edu.sg/soc/courses/full-time-diplomas/data-analytics-and-artificial-intelligence-(ai)/overview-->
                 <img src="../cardphoto/daaacourseinfo.jpg"  class="card-img-top githubimg" alt="Image of DAAA course info">
                 <div class="card-body">
                     <h3 class="card-title">My Course</h3>
@@ -387,6 +397,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <div id="card4backside">
                 <div class="container row aligncard">
                     <div class="text-center">
+                        <!--Icon from https://github.com/icons8/flat-color-icons-->
                         <img src="../cardicons/document.svg" alt="Icon of document" class="cardimagestyle">
                         <p><strong>I am a AY2021 student in the course of <span class="golden">Diploma in Applied AI and Analytics</span>. School have started for a few months.Learn more about how my course is like.</strong></p>
 
