--- a/html-files/secondary.html
+++ b/html-files/secondary.html
@@ -71,6 +71,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 </ul>
                 <!--Search button-->
                 <form class="d-flex">
+                    <!--Search icon taken from https://www.clipartmax.com/middle/m2H7m2K9H7b1G6m2_computer-icons-google-search-clip-art-transprent-%E2%93%92-transparent-background-magnifying-glass/-->
                     <img src="../searchbaricons/search.png" id="search" alt="Icon of search"/>
                 </form>
             </div>
@@ -234,6 +235,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <div class=" text-center">
             <p>Swipe to know more</p>
             <!--Upon clicked ,slide to the first section-->
+            <!--Icon from BootStrap https://icons.getbootstrap.com/icons/arrow-down-square/-->
             <img  onclick="window.location.href='secondary.html#secreflection';" src="../arrowdown/arrowdown.svg" alt="Image of arrow down" class="square">
         </div>
     </div>
@@ -253,6 +255,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 
         <!--Corresponding images another half in First section-->
         <div class=" col-md-6 col-sm-12 text-end">
+            <!--Image from https://favpng.com/png_view/dr-cap-and-diploma-graduation-graduation-ceremony-square-academic-cap-diploma-clip-art-png/Z6h5dtZh-->
 <img src="../secondaryschoolphoto/graduationcap.png" alt="Image of graduation caps" class="academiccap">
         </div>
 
@@ -374,6 +377,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             </div>
             <!--Photo at right occupying half of the line for medium size screen,and full line for small screen(next line)-->
             <div class="col-md-6 col-sm-12 text-end">
+                <!-- Dunearn Secondary School Logo from https://dunearnsec.moe.edu.sg/-->
                 <img src="../secondaryschoolphoto/dunearnsecondarylogo.png" alt="Image of Dunearn Secondary School logo" class="dunearnlogo">
             </div>
         </div>
