--- a/html-files/sp.html
+++ b/html-files/sp.html
@@ -56,6 +56,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                     </li>
                 </ul>
                 <form class="d-flex">
+                    <!--Search icon taken from https://www.clipartmax.com/middle/m2H7m2K9H7b1G6m2_computer-icons-google-search-clip-art-transprent-%E2%93%92-transparent-background-magnifying-glass/-->
                     <img src="../searchbaricons/search.png" id="search" alt="Image of search"/>
                 </form>
             </div>
@@ -111,6 +112,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <br><br>
                 <h1>Singapore Polytechnic Experience</h1>
                 <p>View first impressions and things about Singapore Polytechnic</p>
+                <!--Icon from BootStrap https://icons.getbootstrap.com/icons/arrow-down-square/-->
                 <img  onclick="window.location.href='sp.html#spsection1';" src="../arrowdown/arrowdown.svg" alt="Image of arrow down" class="square">
             </div>
         </div>
@@ -143,6 +145,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     <div class="container" >
         <div class="row" id="studysection">
             <div class="col-sm-12 col-md-6">
+                <!-- Icon from https://cdn.iconscout.com/icon/premium/png-512-thumb/study-2280013-1902258.png-->
 <img src="../spphoto/study.svg" id="study"  alt="Image of studying" class="greyscale studysvg">
             </div>
 <div class="col-sm-12 col-md-6 text-end">
@@ -168,6 +171,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     <div class="container" id="foodsection">
         <div class="row">
             <div class="col-sm-12 col-md-6">
+                <!-- Image taken from https://www.google.com/url?sa=i&url=https%3A%2F%2Ficonscout.com%2Ficon%2Ffast-food-1851561&psig=AOvVaw2ALq-TrlopzTEroz0SIhtt&ust=1626397182807000&source=images&cd=vfe&ved=0CAsQjhxqFwoTCPiZn-Xv4_ECFQAAAAAdAAAAABAD-->
 <img src="../spphoto/food.svg"  id="food" alt="Image of Food" class="greyscale foodsvg">
             </div>
 <div class="col-sm-12 col-md-6 text-end">
