--- a/html-files/about.html
+++ b/html-files/about.html
@@ -57,6 +57,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                     </li>
                 </ul>
                 <form class="d-flex">
+                    <!--Search icon taken from https://www.clipartmax.com/middle/m2H7m2K9H7b1G6m2_computer-icons-google-search-clip-art-transprent-%E2%93%92-transparent-background-magnifying-glass/-->
                     <img src="../searchbaricons/search.png" id="search" alt="Image of search"/>
                 </form>
             </div>
@@ -113,6 +114,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <br><br>
                 <h1><span id="timegreeting"></span></h1>
                 <p>Welcome to about me page ,know more about me ! :)</p>
+                <!--Icon from BootStrap https://icons.getbootstrap.com/icons/arrow-down-square/-->
                 <img  onclick="window.location.href='about.html#aboutmeover'" src="../arrowdown/arrowdown.svg" alt="Icon of arrow down" class="square">
             </div>
              <script src="../js/detecthouranimation.js"></script>
