--- a/html-files/feedback.html
+++ b/html-files/feedback.html
@@ -71,6 +71,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 </ul>
                 <!--Search button-->
                 <form class="d-flex">
+                    <!--Search icon taken from https://www.clipartmax.com/middle/m2H7m2K9H7b1G6m2_computer-icons-google-search-clip-art-transprent-%E2%93%92-transparent-background-magnifying-glass/-->
                     <img src="../searchbaricons/search.png" id="search" alt="Icon of search"/>
                 </form>
             </div>
@@ -168,6 +169,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                     <h1>Feedback Wall</h1>
                     <p>All feedback written will be shown at the wall above<br>Write your first feedback today!!</p>
                     <!--Slide down button *Smooth scrolll had been enabled throughout-->
+                    <!--Icon from BootStrap https://icons.getbootstrap.com/icons/arrow-down-square/-->
                     <img  onclick="window.location.href='feedback.html#feedbackform'" src="../arrowdown/arrowdown.svg" alt="Icon of arrow down" class="square">
                 </div>
             </div>
@@ -528,7 +530,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <!-- End of the left section of the first section-->
         <!--Start of the right section of the first section (Occupy 6 grid too)-->
         <div class="col-sm-12 col-lg-6 text-end  ">
-            <!--A image -->
+            <!--A image taken from https://www.clipartmax.com/middle/m2H7G6A0d3H7H7i8_feedback-clipart-enquiry-feedback-flat-icon-png/ -->
             <img src="../feedback/feedback.png" alt="Image of feedback" class="height400">
         </div>
     </div>
