We have removed all inline style in card :)

--- a/html-files/future.html
+++ b/html-files/future.html
@@ -185,8 +185,8 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 <div class="container-fluid margintop grey">
     <div class="container">
         <div class="row" id="expsp">
-            <div class="catt col-xl-3 col-md-6 col-sm-6" >
-                <div class="card" id='card1' style="width: 20rem; height: 25rem;">
+            <div class="catt col-xl-3 col-md-3 col-lg-6 col-sm-6" >
+                <div class="card" id='card1' >
                     <div id="card1font">
                         <img src="../spphoto/singaporepolytechnicfrontview.jpg"  class="card-img-top cardimg1" alt="Image of Singapore Polytechnic ">
                         <div class="card-body">
@@ -207,8 +207,8 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                     </div>
                 </div>
             </div>
-            <div class="catt col-xl-3 col-md-6 col-sm-6" >
-                <div class="card" id='card2' style="width: 20rem; height: 25rem;">
+            <div class="catt col-xl-3 col-lg-6 col-md-3 col-sm-6" >
+                <div class="card" id='card2' >
                     <div id="card2font">
                         <img src="../spphoto/daaaclassphoto.jpg"  class="card-img-top cardimg1" alt="DAAA/FT/1A/04 AY2021 Class Photo">
                         <div class="card-body">
