--- a/html-files/index.html
+++ b/html-files/index.html
@@ -309,7 +309,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 <!--4 spinning card element ,appear all 4 in extralarge screen,2 in medium ,1 in small screen-->
     <div class="catt col-lg-4 col-md-6 col-sm-12 col-xl-3">
  <!--Card 1 (on hover flip to backside-->
-    <div class="card" id='card1' style="width:20rem;height:25rem;" >
+    <div class="card" id='card1'  >
       <div id="card1font">
           <!-- Image from https://mastermandarin.org/tag/education/ -->
         <img src="../cardphoto/education.jpg" class="card-img-top" alt="Image of books">
@@ -335,7 +335,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         </div>
         <div class="catt col-lg-4 col-md-6 col-sm-12 col-xl-3" >
             <!--Card 2 (on hover flip to backside-->
-            <div class="card " id="card3" style="width:20rem;height:25rem;">
+            <div class="card " id="card3" >
           <div id="card3font">
               <!-- Image from https://6nomads.com/resources/remotetools/tproduct/250509661-285866365871-github-->
             <img src="../cardphoto/github.png"  class="card-img-top githubimg" alt="Image of Github">
@@ -359,7 +359,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 
         <div class="catt col-lg-4 col-md-6 col-sm-12 col-xl-3" >
             <!--Card 3 (on hover flip to backside)-->
-            <div class="card" id="card2" style="width:20rem;height:25rem;">
+            <div class="card" id="card2" >
                <div id="card2font">
                    <!-- Image from https://www.execunet.com/category/career-center/market-info-and-trends/executive-market-intelligence-market-info-and-trends/page/2/
                    -->
@@ -387,7 +387,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 
         <div class="catt col-lg-4 col-md-6 col-sm-12 col-xl-3" >
             <!--Card 4 (on hover flip to backside-->
-            <div class="card" id='card4' style="width:20rem;height:25rem;">
+            <div class="card" id='card4' >
              <div id="card4font">
                  <!--Image from Singapore Polytechnic Website ,https://www.sp.edu.sg/soc/courses/full-time-diplomas/data-analytics-and-artificial-intelligence-(ai)/overview-->
                 <img src="../cardphoto/daaacourseinfo.jpg"  class="card-img-top githubimg" alt="Image of DAAA course info">
